--- a/Test_3_solution.ipynb
+++ b/Test_3_solution.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7ftmqnVwdsITYI7o5BWeF",
+      "authorship_tag": "ABX9TyNtOr+SlAZJfj2xcZ/wvdWP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -787,9 +787,255 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def find_linear_reg_model_params_using_sklearn(train_scaled_feats_bias_included, y_train):\n",
+        "  ###Begin Solution\n",
+        "  reg = LinearRegression(fit_intercept= False)\n",
+        "  reg.fit(train_scaled_feats_bias_included, y_train)\n",
+        "  return (reg, reg.coef_)\n",
+        "\n",
+        "  ### End Solution"
+      ],
       "metadata": {
         "id": "Db09DpMYqhpd"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#To test this , you have to first implement add_bias()\n",
+        "train_scaled_feats_bias_included = add_bias(_scaled_features_train)\n",
+        "\n",
+        "assert np.isclose(find_linear_reg_model_params_using_sklearn(train_scaled_feats_bias_included, y_train) [1], np.array([-1.83668608e+02,\n",
+        "                                                                                                                       2.14610082e+02, 1.86071338e+02, 4.34628838e-01,\n",
+        "                                                                                                                       3.02967905e+03])).all()\n",
+        "\n",
+        "### Begin solution \n",
+        "params_using_sklearn - find_linear_reg_model_params_using_sklearn(train_scaled_feats_bias_included, y_train)[1]\n",
+        "assert np.isclose(params_using_numpy, params_using_sklearn).all()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        },
+        "id": "i49AwOv-IvGx",
+        "outputId": "5ef07ed8-9f09-4126-91b6-a40f387fddf2"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-aaa720637439>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#To test this , you have to first implement add_bias()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain_scaled_feats_bias_included\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madd_bias\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_scaled_features_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m assert np.isclose(find_linear_reg_model_params_using_sklearn(train_scaled_feats_bias_included, y_train) [1], np.array([-1.83668608e+02,\n\u001b[1;32m      5\u001b[0m                                                                                                                        \u001b[0;36m2.14610082e+02\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.86071338e+02\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4.34628838e-01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'add_bias' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg_model = find_linear_reg_model_params_using_sklearn(train_scaled_feats_bias_included, y_train)[0]\n",
+        "reg_model"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        },
+        "id": "O64YuYJmKN1i",
+        "outputId": "66731917-8a79-4e62-eadd-a05170744748"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-be86ec17fed1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreg_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_linear_reg_model_params_using_sklearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_scaled_feats_bias_included\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mreg_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'train_scaled_feats_bias_included' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 8 "
+      ],
+      "metadata": {
+        "id": "EORmjAgDKery"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_coefficient_of_determination(model, _scaled_features_test, y_test):\n",
+        "  ### Begin solution\n",
+        "  _scaled_features_test_bias_included = add_bias(_scaled_feaetures_test)\n",
+        "  return model.score(_scaled_feature_test_bias_included, y_test)\n",
+        "\n",
+        "  ###End Solution"
+      ],
+      "metadata": {
+        "id": "0dgtoze9Kcx9"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "### Begin Hidden Tests\n",
+        "assert np.isclose(get_coefficient_of_determination(reg, _scaled_features_test, y_test), 0.9952866095664767)\n",
+        "#End solution"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        },
+        "id": "qiHwuEB_K2yJ",
+        "outputId": "2aea0435-2fbf-478a-d059-6a9667342973"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-bc2c029b68ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m### Begin Hidden Tests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_coefficient_of_determination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_scaled_features_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.9952866095664767\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m#End solution\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score = get_coefficient_of_determination(reg_model , _scaled_features_test, y_test)\n",
+        "score #.99"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 182
+        },
+        "id": "hHIfB3h8LT1a",
+        "outputId": "16c5981a-c9e2-40ad-f49f-d89f74afc2ba"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-c440a0612ba8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_coefficient_of_determination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreg_model\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0m_scaled_features_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;31m#.99\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'reg_model' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "RMSE"
+      ],
+      "metadata": {
+        "id": "CwN_llr8Ldp8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "### import any library you need . we have not imported any packagesfor this one \n"
+      ],
+      "metadata": {
+        "id": "iHtC_j7CLbUn"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "###Begin Solution\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "### End Solution\n"
+      ],
+      "metadata": {
+        "id": "rFSmEvCLLlbu"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rmse(model , _scaled_features_test):\n",
+        "  ### Begin solution\n",
+        "  y_pred = model.predict(add_bias(_scaled_features_test))\n",
+        "  rmse= np.sqrt(mean_squared_error(y_test,y_pred))\n",
+        "  return rmse\n",
+        "  ### end Solution"
+      ],
+      "metadata": {
+        "id": "uAXnljX5LsYI"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "### Begin hiddden soluton\n",
+        "assert np.isclse(rmse(reg_model, _scaled_features_test), 13.805553283267848)\n",
+        "### End soultion"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        },
+        "id": "11q7gEQ9MCoy",
+        "outputId": "b7ffb5fd-a165-45e2-c2ef-8f68cf90bcc0"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-0552e68fd06b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m### Begin hiddden soluton\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misclse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrmse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreg_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_scaled_features_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m13.805553283267848\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m### End soultion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EAi9UTLQMRJh"
       },
       "execution_count": null,
       "outputs": []
